added route for guest login and guest email display

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0"
   }
 }
