--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.5.2",
     "node": "^16.14.2",
     "nodemon": "^2.0.19",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0"
   },
   "repository": {
