--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://noble-emr.herokuapp.com",
+  "proxy": "https://noble-ehr.herokuapp.com",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
